--- a/package.json
+++ b/package.json
@@ -18,45 +18,48 @@
   "author": "Leo Hubert <leo.hubert@epitech.eu>",
   "license": "MIT",
   "homepage": "https://github.com/michalzaq12/electron-nuxt/blob/master/README.md",
-  "engines" : {
-    "node" : ">=12.13.0"
+  "engines": {
+    "node": ">=12.13.0"
   },
   "resolutions": {
     "@types/node": "12.12.6"
   },
   "devDependencies": {
+    "@nuxt/typescript-build": "0.5.8",
+    "@nuxtjs/eslint-config-typescript": "1.0.2",
+    "@nuxtjs/tailwindcss": "^3.2.0",
+    "@types/webdriverio": "4.13.3",
+    "@vue/test-utils": "1.1.0",
     "@xpda-dev/core": "^0.1.5",
-    "@xpda-dev/electron-launcher": "^0.2.1",
     "@xpda-dev/electron-builder": "^0.2.1",
+    "@xpda-dev/electron-launcher": "^0.2.1",
     "@xpda-dev/webpack-step": "^0.1.2",
-    "deepmerge": "4.2.2",
     "ava": "2.4.0",
+    "babel-plugin-webpack-alias-7": "0.1.1",
     "browser-env": "3.3.0",
     "cross-env": "7.0.2",
+    "deepmerge": "4.2.2",
     "electron": "8.3.0",
     "electron-builder": "22.8.1",
     "electron-debug": "3.1.0",
     "eslint": "5.16.0",
-    
     "eslint-friendly-formatter": "4.0.1",
     "eslint-loader": "4.0.2",
-    
-    "@nuxtjs/eslint-config-typescript": "1.0.2",
     "native-ext-loader": "2.3.0",
-    "nuxt": "2.14.5",
-    "typescript": "3.7.5",
-    "@nuxt/typescript-build": "0.5.8",
     "node-sass": "4.14.1",
-    "sass-loader": "10.0.2",
-    "spectron": "10.0.1",
-    "@types/webdriverio": "4.13.3",
-    "vue-devtools": "5.1.4",
-    "@vue/test-utils": "1.1.0",
+    "nuxt": "2.14.5",
     "require-extension-hooks": "0.3.3",
     "require-extension-hooks-babel": "1.0.0",
     "require-extension-hooks-vue": "0.4.2",
-    "babel-plugin-webpack-alias-7": "0.1.1",
+    "sass-loader": "10.0.2",
+    "spectron": "10.0.1",
+    "typescript": "3.7.5",
+    "vue-devtools": "5.1.4",
     "webpack": "4.44.2",
     "webpack-node-externals": "2.5.2"
+  },
+  "dependencies": {
+    "@nuxtjs/auth": "^4.9.1",
+    "@nuxtjs/axios": "^5.12.2"
   }
 }
