--- a/src/renderer/tsconfig.json
+++ b/src/renderer/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "esnext",
     "module": "esnext",
     "moduleResolution": "node",
+    "experimentalDecorators": true,
     "skipLibCheck": true,
     "lib": [
       "esnext",
