--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   },
   "dependencies": {
     "@nuxtjs/auth": "^4.9.1",
-    "@nuxtjs/axios": "^5.12.2"
+    "@nuxtjs/axios": "^5.12.2",
+    "v-tooltip": "^2.0.3"
   }
 }
