--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
   "dependencies": {
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.12.2",
+    "node-downloader-helper": "^1.0.15",
     "v-tooltip": "^2.0.3"
   }
 }
