--- a/package.json
+++ b/package.json
@@ -56,9 +56,10 @@
     "webpack-node-externals": "2.5.2"
   },
   "dependencies": {
-    "@emodyz/node-downloader": "^1.2.0",
+    "@emodyz/node-downloader": "^1.3.0",
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.12.2",
+    "find-steam-app": "^1.0.2",
     "v-tooltip": "^2.0.3"
   }
 }
