--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   "devDependencies": {
     "@nuxt/typescript-build": "0.5.8",
     "@nuxtjs/eslint-config-typescript": "1.0.2",
+    "@nuxtjs/laravel-echo": "^1.1.0",
     "@nuxtjs/tailwindcss": "^3.2.0",
+    "@types/animejs": "^3.1.2",
     "@types/webdriverio": "4.13.3",
     "@vue/test-utils": "1.1.0",
     "@xpda-dev/core": "^0.1.5",
@@ -45,6 +47,7 @@
     "native-ext-loader": "2.3.0",
     "node-sass": "4.14.1",
     "nuxt": "2.14.5",
+    "pusher-js": "^7.0.1",
     "require-extension-hooks": "0.3.3",
     "require-extension-hooks-babel": "1.0.0",
     "require-extension-hooks-vue": "0.4.2",
@@ -59,6 +62,7 @@
     "@emodyz/node-downloader": "^1.4.1",
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.12.2",
+    "animejs": "^3.2.1",
     "find-steam-app": "^1.0.2",
     "v-tooltip": "^2.0.3"
   }
