Issue #13 - Move to tailwind2

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@xpda-dev/electron-builder": "^0.2.1",
     "@xpda-dev/electron-launcher": "^0.2.1",
     "@xpda-dev/webpack-step": "^0.1.2",
+    "autoprefixer": "^9",
     "ava": "2.4.0",
     "babel-plugin-webpack-alias-7": "0.1.1",
     "browser-env": "3.3.0",
@@ -47,12 +48,14 @@
     "native-ext-loader": "2.3.0",
     "node-sass": "4.14.1",
     "nuxt": "2.14.5",
+    "postcss": "^7",
     "pusher-js": "^7.0.1",
     "require-extension-hooks": "0.3.3",
     "require-extension-hooks-babel": "1.0.0",
     "require-extension-hooks-vue": "0.4.2",
     "sass-loader": "10.0.2",
     "spectron": "10.0.1",
+    "tailwindcss": "2.0.1-compat",
     "typescript": "3.7.5",
     "vue-devtools": "5.1.4",
     "webpack": "4.44.2",
