--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "find-steam-app": "^1.0.2",
     "marked": "^1.2.5",
     "v-tooltip": "^2.0.3",
+    "vuex-module-decorators": "^1.0.1",
     "vuex-persist": "^3.1.3"
   }
 }
