--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "node": ">=12.13.0"
   },
   "devDependencies": {
-    "@nuxt/typescript-build": "0.5.8",
+    "@nuxt/types": "^2.14.12",
+    "@nuxt/typescript-build": "^2.0.3",
     "@nuxtjs/eslint-config-typescript": "1.0.2",
     "@nuxtjs/laravel-echo": "^1.1.0",
     "@nuxtjs/tailwindcss": "^3.2.0",
     "@types/animejs": "^3.1.2",
+    "@types/marked": "^1.2.1",
     "@types/webdriverio": "4.13.3",
     "@vue/test-utils": "1.1.0",
     "@xpda-dev/core": "^0.1.5",
@@ -56,8 +58,11 @@
     "sass-loader": "10.0.2",
     "spectron": "10.0.1",
     "tailwindcss": "2.0.1-compat",
-    "typescript": "3.7.5",
+    "ts-loader": "^8.0.14",
+    "typescript": "^4.1.3",
+    "vue-class-component": "^7.2.6",
     "vue-devtools": "5.1.4",
+    "vue-property-decorator": "^9.1.2",
     "webpack": "4.44.2",
     "webpack-node-externals": "2.5.2"
   },
