--- a/src/renderer/tsconfig.json
+++ b/src/renderer/tsconfig.json
@@ -1,16 +1,14 @@
 {
   "compilerOptions": {
-    "target": "esnext",
-    "module": "esnext",
-    "moduleResolution": "node",
-    "experimentalDecorators": true,
-    "skipLibCheck": true,
+      "experimentalDecorators": true,
+    "target": "ES2018",
+    "module": "ESNext",
+    "moduleResolution": "Node",
     "lib": [
-      "esnext",
-      "esnext.asynciterable",
-      "dom"
+      "ESNext",
+      "ESNext.AsyncIterable",
+      "DOM"
     ],
-    "noImplicitAny": false,
     "esModuleInterop": true,
     "allowJs": true,
     "sourceMap": true,
@@ -26,7 +24,11 @@
       ]
     },
     "types": [
+      "@types/node",
       "@nuxt/types"
     ]
-  }
+  },
+  "exclude": [
+    "node_modules"
+  ]
 }
