--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nuxtjs/eslint-config-typescript": "1.0.2",
     "@nuxtjs/laravel-echo": "^1.1.0",
     "@nuxtjs/tailwindcss": "^3.2.0",
+    "@tailwindcss/forms": "^0.2.1",
     "@types/animejs": "^3.1.2",
     "@types/marked": "^1.2.1",
     "@types/webdriverio": "4.13.3",
