--- a/package.json
+++ b/package.json
@@ -19,40 +19,39 @@
   "license": "MIT",
   "homepage": "https://github.com/michalzaq12/electron-nuxt/blob/master/README.md",
   "engines": {
-    "node": ">=12.13.0"
+    "node": ">=12.18.3"
   },
   "devDependencies": {
-    "@nuxt/types": "^2.14.12",
-    "@nuxt/typescript-build": "^2.0.3",
-    "@nuxtjs/eslint-config-typescript": "1.0.2",
-    "@nuxtjs/laravel-echo": "^1.1.0",
-    "@nuxtjs/tailwindcss": "^3.2.0",
+    "@nuxt/types": "^2.15.1",
+    "@nuxt/typescript-build": "^2.0.4",
+    "@nuxtjs/auth": "^4.9.1",
+    "@nuxtjs/axios": "^5.12.2",
+    "@nuxtjs/eslint-config-typescript": "^5.0.0",
+    "@nuxtjs/tailwindcss": "^3.4.2",
     "@tailwindcss/forms": "^0.2.1",
-    "@types/animejs": "^3.1.2",
-    "@types/marked": "^1.2.1",
-    "@types/webdriverio": "4.13.3",
-    "@vue/test-utils": "1.1.0",
+    "@tailwindcss/typography": "^0.3.1",
+    "@types/marked": "^1.2.2",
+    "@vue/test-utils": "^1.1.3",
     "@xpda-dev/core": "^0.1.5",
     "@xpda-dev/electron-builder": "^0.2.1",
     "@xpda-dev/electron-launcher": "^0.2.1",
     "@xpda-dev/webpack-step": "^0.1.2",
     "autoprefixer": "^9",
-    "ava": "2.4.0",
-    "babel-plugin-webpack-alias-7": "0.1.1",
+    "ava": "^2.4.0",
+    "babel-plugin-webpack-alias-7": "^0.1.1",
     "browser-env": "3.3.0",
-    "cross-env": "7.0.2",
-    "deepmerge": "4.2.2",
-    "electron": "8.5.2",
-    "electron-builder": "22.8.1",
-    "electron-debug": "3.1.0",
-    "eslint": "5.16.0",
-    "eslint-friendly-formatter": "4.0.1",
-    "eslint-loader": "4.0.2",
+    "cross-env": "^7.0.3",
+    "deepmerge": "^4.2.2",
+    "electron": "^9.4.3",
+    "electron-builder": "^22.9.1",
+    "electron-debug": "^3.2.0",
+    "eslint": "^7.20.0",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-loader": "^4.0.2",
     "native-ext-loader": "2.3.0",
     "node-sass": "4.14.1",
-    "nuxt": "^2.15.0",
+    "nuxt": "2.14.12",
     "postcss": "^7",
-    "pusher-js": "^7.0.1",
     "require-extension-hooks": "0.3.3",
     "require-extension-hooks-babel": "1.0.0",
     "require-extension-hooks-vue": "0.4.2",
@@ -64,19 +63,15 @@
     "vue-class-component": "^7.2.6",
     "vue-devtools": "5.1.4",
     "vue-property-decorator": "^9.1.2",
+    "vuex-module-decorators": "^1.0.1",
+    "vuex-persist": "^3.1.3",
     "webpack": "4.44.2",
     "webpack-node-externals": "2.5.2"
   },
   "dependencies": {
     "@emodyz/node-downloader": "^1.5.0",
-    "@nuxtjs/auth": "^4.9.1",
-    "@nuxtjs/axios": "^5.12.2",
-    "@tailwindcss/typography": "^0.3.1",
-    "animejs": "^3.2.1",
     "find-steam-app": "^1.0.2",
-    "marked": "^1.2.5",
-    "v-tooltip": "^2.0.3",
-    "vuex-module-decorators": "^1.0.1",
-    "vuex-persist": "^3.1.3"
+    "marked": "^2.0.0",
+    "v-tooltip": "^2.0.3"
   }
 }
