--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint": "node_modules/.bin/eslint --ext .js,.vue,.ts -f ./node_modules/eslint-friendly-formatter ./src",
     "lint:fix": "yarn run lint --fix",
     "preinstall": "node .electron-nuxt/check-engines.js",
-    "postinstall": "electron-builder install-app-deps & yarn run lint:fix"
+    "postinstall": "electron-builder install-app-deps & yarn run lint:fix",
+    "sync": "yarn run build -w && rsync -azvgP ~/Launcher/multigaming/MultigamingLauncher/build/win-unpacked/* /Volumes/Launcher/"
   },
   "keywords": [],
   "author": "Leo Hubert <leo.hubert@epitech.eu>",
@@ -70,6 +71,7 @@
   },
   "dependencies": {
     "@emodyz/node-downloader": "^1.5.0",
+    "find-process": "^1.4.4",
     "find-steam-app": "^1.0.2",
     "marked": "^2.0.0",
     "v-tooltip": "^2.0.3"
