--- a/src/renderer/tsconfig.json
+++ b/src/renderer/tsconfig.json
@@ -4,6 +4,7 @@
     "target": "esnext",
     "module": "esnext",
     "moduleResolution": "node",
+    "skipLibCheck": true,
     "lib": [
       "esnext",
       "esnext.asynciterable",
