--- a/src/main/tsconfig.json
+++ b/src/main/tsconfig.json
@@ -6,6 +6,12 @@
     "allowJs": true,
     "baseUrl": ".",
     "paths": {
-    }
+    },
+    "lib": [
+      "dom",
+      "es5",
+      "scripthost",
+      "es2015.promise"
+    ]
   }
 }
