--- a/package.json
+++ b/package.json
@@ -32,13 +32,13 @@
     "@nuxt/typescript-build": "2.1.0",
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.13.1",
-    "@nuxtjs/eslint-config-typescript": "6.0.0",
+    "@nuxtjs/eslint-config-typescript": "^6.0.1",
     "@nuxtjs/tailwindcss": "^4.0.3",
     "@tailwindcss/forms": "^0.3.2",
     "@tailwindcss/typography": "^0.4.0",
     "@types/electron-devtools-installer": "^2.2.0",
     "@types/marked": "^2.0.1",
-    "@vue/test-utils": "1.1.3",
+    "@vue/test-utils": "^1.2.2",
     "@xpda-dev/core": "^0.1.6",
     "@xpda-dev/electron-builder": "^0.2.1",
     "@xpda-dev/electron-launcher": "^0.3.0",
@@ -49,14 +49,14 @@
     "cross-env": "7.0.3",
     "deepmerge": "4.2.2",
     "electron": "12.0.2",
-    "electron-builder": "22.10.5",
-    "electron-devtools-installer": "3.1.1",
-    "eslint": "7.23.0",
+    "electron-builder": "^22.11.7",
+    "electron-devtools-installer": "^3.2.0",
+    "eslint": "^7.32.0",
     "eslint-friendly-formatter": "4.0.1",
     "eslint-loader": "4.0.2",
     "native-ext-loader": "2.3.0",
     "node-sass": "4.14.1",
-    "nuxt": "2.15.4",
+    "nuxt": "^2.15.8",
     "postcss": "^8.2.9",
     "require-extension-hooks": "0.3.3",
     "require-extension-hooks-babel": "1.0.0",
