Electron 12 + Refactor module system  (#24)

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "multigaming-launcher",
-  "version": "1.0.0",
-  "description": "MultigamingLauncher for players",
+  "version": "0.0.1",
+  "description": "A all in one GameLauncher for communities.",
   "main": "./dist/main/index.js",
   "scripts": {
     "dev": "node .electron-nuxt/dev.js",
@@ -10,59 +10,59 @@
     "test:e2e": "cross-env NODE_ENV=test TEST_TYPE=e2e ava",
     "test": "yarn run test:unit && yarn run test:e2e",
     "lint": "node_modules/.bin/eslint --ext .js,.vue,.ts -f ./node_modules/eslint-friendly-formatter ./src",
-    "lint:fix": "yarn run lint --fix",
+    "lint:fix": "yarn run lint -- --fix",
     "preinstall": "node .electron-nuxt/check-engines.js",
-    "postinstall": "electron-builder install-app-deps & yarn run lint:fix",
-    "sync": "yarn run build -w && rsync -azvgP ~/Launcher/multigaming/MultigamingLauncher/build/win-unpacked/* /Volumes/Launcher/"
+    "postinstall": "electron-builder install-app-deps & yarn run lint:fix"
   },
   "keywords": [],
-  "author": "Leo Hubert <leo.hubert@epitech.eu>",
+  "author": {
+    "name": "Emodyz",
+    "email": "admin@emodyz.eu"
+  },
   "license": "MIT",
   "homepage": "https://github.com/michalzaq12/electron-nuxt/blob/master/README.md",
   "engines": {
-    "node": ">=12.18.3"
+    "node": ">=12.13.0"
+  },
+  "resolutions": {
+    "@types/node": "12.12.6"
   },
   "devDependencies": {
-    "@nuxt/types": "^2.15.1",
-    "@nuxt/typescript-build": "^2.0.4",
+    "@nuxt/types": "^2.15.4",
+    "@nuxt/typescript-build": "2.1.0",
     "@nuxtjs/auth": "^4.9.1",
-    "@nuxtjs/axios": "^5.12.2",
-    "@nuxtjs/eslint-config-typescript": "^5.0.0",
-    "@nuxtjs/tailwindcss": "^3.4.2",
-    "@tailwindcss/forms": "^0.2.1",
-    "@tailwindcss/typography": "^0.3.1",
-    "@types/marked": "^1.2.2",
-    "@vue/test-utils": "^1.1.3",
-    "@xpda-dev/core": "^0.1.5",
+    "@nuxtjs/axios": "^5.13.1",
+    "@nuxtjs/eslint-config-typescript": "^6.0.1",
+    "@nuxtjs/tailwindcss": "^4.0.3",
+    "@tailwindcss/forms": "^0.3.2",
+    "@tailwindcss/typography": "^0.4.0",
+    "@types/electron-devtools-installer": "^2.2.0",
+    "@types/marked": "^2.0.1",
+    "@vue/test-utils": "^1.2.2",
+    "@xpda-dev/core": "^0.1.6",
     "@xpda-dev/electron-builder": "^0.2.1",
-    "@xpda-dev/electron-launcher": "^0.2.1",
+    "@xpda-dev/electron-launcher": "^0.3.0",
     "@xpda-dev/webpack-step": "^0.1.2",
-    "autoprefixer": "^9",
-    "ava": "^2.4.0",
-    "babel-plugin-webpack-alias-7": "^0.1.1",
+    "ava": "2.4.0",
+    "babel-plugin-webpack-alias-7": "0.1.1",
     "browser-env": "3.3.0",
-    "cross-env": "^7.0.3",
-    "deepmerge": "^4.2.2",
-    "electron": "^9.4.3",
-    "electron-builder": "^22.9.1",
-    "electron-debug": "^3.2.0",
-    "eslint": "^7.20.0",
-    "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^4.0.2",
+    "cross-env": "7.0.3",
+    "deepmerge": "4.2.2",
+    "electron": "12.0.2",
+    "electron-builder": "^22.11.7",
+    "electron-devtools-installer": "^3.2.0",
+    "eslint": "^7.32.0",
+    "eslint-friendly-formatter": "4.0.1",
+    "eslint-loader": "4.0.2",
     "native-ext-loader": "2.3.0",
     "node-sass": "4.14.1",
-    "nuxt": "2.14.12",
-    "postcss": "^7",
+    "nuxt": "^2.15.8",
+    "postcss": "^8.2.9",
     "require-extension-hooks": "0.3.3",
     "require-extension-hooks-babel": "1.0.0",
     "require-extension-hooks-vue": "0.4.2",
     "sass-loader": "10.0.2",
-    "spectron": "10.0.1",
-    "tailwindcss": "2.0.1-compat",
-    "ts-loader": "^8.0.14",
-    "typescript": "^4.1.3",
     "vue-class-component": "^7.2.6",
-    "vue-devtools": "5.1.4",
     "vue-property-decorator": "^9.1.2",
     "vuex-module-decorators": "^1.0.1",
     "vuex-persist": "^3.1.3",
@@ -70,10 +70,10 @@
     "webpack-node-externals": "2.5.2"
   },
   "dependencies": {
-    "@emodyz/node-downloader": "^1.5.0",
+    "@emodyz/node-downloader": "^2.0.0-RC.2",
     "find-process": "^1.4.4",
     "find-steam-app": "^1.0.2",
-    "marked": "^2.0.0",
-    "v-tooltip": "^2.0.3"
+    "marked": "^2.0.1",
+    "v-tooltip": "^2.1.3"
   }
 }
