--- a/package.json
+++ b/package.json
@@ -22,54 +22,54 @@
   "license": "MIT",
   "homepage": "https://github.com/michalzaq12/electron-nuxt/blob/master/README.md",
   "engines": {
-    "node": ">=12.13.0"
+    "node": ">=14.14.9"
   },
   "resolutions": {
-    "@types/node": "12.12.6"
+    "@types/node": "14.14.9"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.4",
-    "@nuxt/typescript-build": "2.1.0",
+    "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/auth": "^4.9.1",
-    "@nuxtjs/axios": "^5.13.1",
-    "@nuxtjs/eslint-config-typescript": "^6.0.1",
+    "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/eslint-config-typescript": "8.0.0",
     "@tailwindcss/forms": "^0.3.2",
     "@tailwindcss/typography": "^0.4.0",
-    "@types/electron-devtools-installer": "^2.2.0",
+    "@types/electron-devtools-installer": "^2.2.2",
     "@types/marked": "^2.0.1",
     "@vue/test-utils": "^1.2.2",
     "@xpda-dev/core": "^0.1.6",
     "@xpda-dev/electron-builder": "^0.2.1",
     "@xpda-dev/electron-launcher": "^0.3.0",
-    "@xpda-dev/webpack-step": "^0.1.2",
+    "@xpda-dev/webpack-step": "^0.1.6",
     "ava": "2.4.0",
     "babel-plugin-webpack-alias-7": "0.1.1",
     "browser-env": "3.3.0",
-    "cross-env": "7.0.3",
-    "deepmerge": "4.2.2",
-    "electron": "12.0.2",
-    "electron-builder": "^22.11.7",
+    "cross-env": "^7.0.3",
+    "deepmerge": "^4.2.2",
+    "electron": "^16.0.5",
+    "electron-builder": "^23.0.3",
     "electron-devtools-installer": "^3.2.0",
-    "eslint": "^7.32.0",
+    "eslint": "8.1.0",
     "eslint-friendly-formatter": "4.0.1",
     "eslint-loader": "4.0.2",
     "native-ext-loader": "2.3.0",
-    "node-sass": "4.14.1",
+    "node-sass": "^6.0.1",
     "nuxt": "^2.15.8",
     "postcss": "^8.2.9",
     "require-extension-hooks": "0.3.3",
     "require-extension-hooks-babel": "1.0.0",
     "require-extension-hooks-vue": "0.4.2",
-    "sass-loader": "10.0.2",
+    "sass-loader": "^10",
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.1.2",
     "vuex-module-decorators": "^1.0.1",
     "vuex-persist": "^3.1.3",
-    "webpack": "4.44.2",
-    "webpack-node-externals": "2.5.2"
+    "webpack": "^4.46.0",
+    "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
-    "@emodyz/node-downloader": "^2.0.0-RC.2",
+    "@emodyz/node-downloader": "^2.0.0-RC.5",
     "@nuxtjs/tailwindcss": "^4.2.1",
     "find-process": "^1.4.4",
     "find-steam-app": "^1.0.2",
