--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
   "license": "MIT",
   "homepage": "https://github.com/michalzaq12/electron-nuxt/blob/master/README.md",
   "engines": {
-    "node": ">=14.14.9"
+    "node": ">=16.11.0"
   },
   "resolutions": {
-    "@types/node": "14.14.9"
+    "@types/node": "16.11.0"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.4",
@@ -66,11 +66,10 @@
     "vuex-module-decorators": "^1.0.1",
     "vuex-persist": "^3.1.3",
     "webpack": "^4.46.0",
-    "webpack-node-externals": "^3.0.0"
-  },
-  "dependencies": {
-    "@emodyz/node-downloader": "^2.0.0-RC.5",
+    "webpack-node-externals": "^3.0.0",
+    "@emodyz/node-downloader": "^2.0.0-RC9",
     "@nuxtjs/tailwindcss": "^4.2.1",
+    "electron-updater": "^5.0.1",
     "find-process": "^1.4.4",
     "find-steam-app": "^1.0.2",
     "marked": "^2.0.1",
