--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "vuex-persist": "^3.1.3",
     "webpack": "^4.46.0",
     "webpack-node-externals": "^3.0.0",
-    "@emodyz/node-downloader": "^2.0.0-RC9",
+    "@emodyz/node-downloader": "^2.0.0",
     "@nuxtjs/tailwindcss": "^4.2.1",
     "electron-updater": "^5.0.1",
     "find-process": "^1.4.4",
