--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,4 +26,9 @@ jobs:
         node-version: 16
     - run: yarn
     - run: yarn build
+    - name: Archive code coverage results
+      uses: actions/upload-artifact@v3
+      with:
+        name: builds
+        path: build/**
     #- run: yarn test
