--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "multigaming-launcher",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "A all in one GameLauncher for communities.",
   "main": "./dist/main/index.js",
   "scripts": {
@@ -28,11 +28,13 @@
     "@types/node": "16.11.0"
   },
   "devDependencies": {
+    "@emodyz/node-downloader": "^2.0.0",
     "@nuxt/types": "^2.15.4",
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.13.6",
-    "@nuxtjs/eslint-config-typescript": "8.0.0",
+    "@nuxtjs/eslint-config-typescript": "10.0.0",
+    "@nuxtjs/tailwindcss": "^4.2.1",
     "@tailwindcss/forms": "^0.3.2",
     "@tailwindcss/typography": "^0.4.0",
     "@types/electron-devtools-installer": "^2.2.2",
@@ -50,9 +52,13 @@
     "electron": "^16.0.5",
     "electron-builder": "^23.0.3",
     "electron-devtools-installer": "^3.2.0",
+    "electron-updater": "^5.0.1",
     "eslint": "8.1.0",
     "eslint-friendly-formatter": "4.0.1",
     "eslint-loader": "4.0.2",
+    "find-process": "^1.4.4",
+    "find-steam-app": "^1.0.2",
+    "marked": "^2.0.1",
     "native-ext-loader": "2.3.0",
     "node-sass": "^6.0.1",
     "nuxt": "^2.15.8",
@@ -61,18 +67,15 @@
     "require-extension-hooks-babel": "1.0.0",
     "require-extension-hooks-vue": "0.4.2",
     "sass-loader": "^10",
+    "v-tooltip": "^2.1.3",
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.1.2",
     "vuex-module-decorators": "^1.0.1",
     "vuex-persist": "^3.1.3",
     "webpack": "^4.46.0",
-    "webpack-node-externals": "^3.0.0",
-    "@emodyz/node-downloader": "^2.0.0",
-    "@nuxtjs/tailwindcss": "^4.2.1",
-    "electron-updater": "^5.0.1",
-    "find-process": "^1.4.4",
-    "find-steam-app": "^1.0.2",
-    "marked": "^2.0.1",
-    "v-tooltip": "^2.1.3"
+    "webpack-node-externals": "^3.0.0"
+  },
+  "dependencies": {
+    "rxjs": "^7.5.5"
   }
 }
