--- a/src/main/tsconfig.json
+++ b/src/main/tsconfig.json
@@ -5,13 +5,15 @@
     "target": "es5",
     "allowJs": true,
     "baseUrl": ".",
+    "experimentalDecorators": true,
     "paths": {
     },
     "lib": [
       "dom",
       "es5",
       "scripthost",
-      "es2015.promise"
+      "es2015.promise",
+      "es2015.proxy"
     ]
   }
 }
