--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "multigaming-launcher",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A all in one GameLauncher for communities.",
   "main": "./dist/main/index.js",
   "scripts": {
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@emodyz/node-downloader": "^2.0.0",
+    "@moddota/find-steam-app": "^1.1.0",
     "@nuxt/types": "^2.15.4",
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/auth": "^4.9.1",
@@ -57,7 +58,6 @@
     "eslint-friendly-formatter": "4.0.1",
     "eslint-loader": "4.0.2",
     "find-process": "^1.4.4",
-    "find-steam-app": "^1.0.2",
     "marked": "^2.0.1",
     "native-ext-loader": "2.3.0",
     "node-sass": "^6.0.1",
