--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "require-extension-hooks": "0.3.3",
     "require-extension-hooks-babel": "1.0.0",
     "require-extension-hooks-vue": "0.4.2",
+    "rxjs": "^7.5.6",
     "sass-loader": "^10",
     "v-tooltip": "^2.1.3",
     "vue-class-component": "^7.2.6",
@@ -76,7 +77,5 @@
     "webpack": "^4.46.0",
     "webpack-node-externals": "^3.0.0"
   },
-  "dependencies": {
-    "rxjs": "^7.5.5"
-  }
+  "dependencies": {}
 }
