--- a/package.json
+++ b/package.json
@@ -30,14 +30,14 @@
   "devDependencies": {
     "@emodyz/node-downloader": "^2.0.0",
     "@moddota/find-steam-app": "^1.1.0",
+    "@nuxt/postcss8": "^1.1.3",
     "@nuxt/types": "^2.15.4",
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/eslint-config-typescript": "10.0.0",
-    "@nuxtjs/tailwindcss": "^4.2.1",
-    "@tailwindcss/forms": "^0.3.2",
-    "@tailwindcss/typography": "^0.4.0",
+    "@tailwindcss/forms": "^0.5.2",
+    "@tailwindcss/typography": "^0.5.4",
     "@types/electron-devtools-installer": "^2.2.2",
     "@types/marked": "^4.0.3",
     "@vue/test-utils": "^1.2.2",
@@ -45,6 +45,7 @@
     "@xpda-dev/electron-builder": "^0.2.1",
     "@xpda-dev/electron-launcher": "^0.3.0",
     "@xpda-dev/webpack-step": "^0.1.6",
+    "autoprefixer": "^10.4.7",
     "ava": "2.4.0",
     "babel-plugin-webpack-alias-7": "0.1.1",
     "browser-env": "3.3.0",
@@ -63,12 +64,13 @@
     "native-ext-loader": "2.3.0",
     "node-sass": "^6.0.1",
     "nuxt": "^2.15.8",
-    "postcss": "^8.2.9",
+    "postcss": "^8.4.14",
     "require-extension-hooks": "0.3.3",
     "require-extension-hooks-babel": "1.0.0",
     "require-extension-hooks-vue": "0.4.2",
     "rxjs": "^7.5.6",
     "sass-loader": "^10",
+    "tailwindcss": "^3.1.6",
     "v-tooltip": "^2.1.3",
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.1.2",
