--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "./dist/main/index.js",
   "scripts": {
     "dev": "node .electron-nuxt/dev.js",
-    "build": "node .electron-nuxt/build.js",
+    "build": "yarn generate-icon && node .electron-nuxt/build.js",
+    "generate-icon": "node iconGenerator.js",
+    "build:generate-icon": "tsc iconGenerator.ts",
     "test:unit": "cross-env NODE_ENV=test TEST_TYPE=unit ava",
     "test:e2e": "cross-env NODE_ENV=test TEST_TYPE=e2e ava",
     "test": "yarn run test:unit && yarn run test:e2e",
@@ -51,6 +53,7 @@
     "browser-env": "3.3.0",
     "cross-env": "^7.0.3",
     "deepmerge": "^4.2.2",
+    "dotenv": "^16.0.1",
     "electron": "^16.0.5",
     "electron-builder": "^23.0.3",
     "electron-devtools-installer": "^3.2.0",
@@ -60,6 +63,7 @@
     "eslint-friendly-formatter": "4.0.1",
     "eslint-loader": "4.0.2",
     "find-process": "^1.4.4",
+    "icon-gen": "^3.0.1",
     "marked": "^4.0.18",
     "native-ext-loader": "2.3.0",
     "node-sass": "^6.0.1",
