chore: improve env and setup github actions

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,7 +26,10 @@ jobs:
         node-version: 16
     - run: yarn
     - run: cp .env.ci .env
-    - run: yarn build
+    - name: Build
+      run: yarn build
+      env:
+        APP_URL: ${{ secrets.APP_URL }}
     - name: Upload ${{ matrix.os }} build
       uses: actions/upload-artifact@v3
       with:
