--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,12 @@ APP_NAME={{APP_NAME}}
 APP_URL={{APP_URL}}
 APP_ID={{APP_ID}}
 
+##
+## App version can be override if needed,
+## For example when changing APP_URL or APP_NAME
+## and force update all end users
+##
+#APP_VERSION={{APP_VERSION}}
+
+## picture file should be in 1024x1024
 ICON_PATH=icon.png
