--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,7 +25,11 @@ jobs:
       with:
         node-version: 16
     - run: yarn
-    - run: yarn build
+    - run: cp .env.ci .env
+    - name: Build
+      run: yarn build
+      env:
+        APP_URL: ${{ secrets.APP_URL }}
     - name: Upload ${{ matrix.os }} build
       uses: actions/upload-artifact@v3
       with:
